--- a/noserver-streaming/index.html
+++ b/noserver-streaming/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RSC Experiments - no server - with client components</title>
+    <title>RSC Experiments - streaming</title>
   </head>
   <body>
     <div id="root"></div>
