--- a/withserver-client-component/client/index.html
+++ b/withserver-client-component/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RSC Experiments - fastify based server</title>
+    <title>RSC Experiments - client components with server</title>
   </head>
   <body>
     <div id="root"></div>
