--- a/withserver-ssr-worker/client/index.html
+++ b/withserver-ssr-worker/client/index.html
@@ -3,10 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RSC Experiments - pages with server</title>
+    <title>RSC Experiments - SSR with worker</title>
   </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/main.jsx"></script>
-  </body>
+  <body></body>
 </html>
